@@ -10,6 +10,7 @@
 #include "V2TechSchools.h"
 #include "V2Party.h"
 #include "Mapper.h"
+#include <set>
 
 class V2Country;
 class V2Province;
@@ -25,7 +26,7 @@ class V2World {
 		
 		void convertCountries(const EU3World& sourceWorld, const countryMapping& countryMap, const cultureMapping& cultureMap, const unionCulturesMap& unionCultures, const religionMapping& religionMap, const governmentMapping& governmentMap, const inverseProvinceMapping& inverseProvinceMap, const vector<techSchool>& techSchools, map<int,int>& leaderMap, const V2LeaderTraits& lt);
 		void convertDiplomacy(const EU3World& sourceWorld, const countryMapping& countryMap);
-		void convertProvinces(const EU3World& sourceWorld, const provinceMapping& provinceMap, const countryMapping& countryMap, const cultureMapping& cultureMap, const religionMapping& religionMap);
+		void convertProvinces(const EU3World& sourceWorld, const provinceMapping& provinceMap, const countryMapping& countryMap, const cultureMapping& cultureMap, const religionMapping& religionMap, const stateIndexMapping& stateIndexMap);
 		void setupStates(const stateMapping&);
 		void convertUncivReforms();
 		void setupPops(EU3World& sourceWorld);
@@ -41,13 +42,14 @@ class V2World {
 		vector<int>	getPortProvinces(vector<int> provinces);
 		V2Country*	getCountry(string tag);
 
-		vector<V2Province*>	provinces;
-		vector<V2Country*>	countries;
-		vector<V2Country*>	potentialCountries;
-		map<int, V2Party*>	parties;
-		V2Diplomacy				diplomacy;
-		int						equalityLeft;
-		int						libertyLeft;
+		vector<V2Province*>		provinces;
+		vector<V2Country*>		countries;
+		vector<V2Country*>		potentialCountries;
+		map<int, V2Party*>		parties;
+		V2Diplomacy					diplomacy;
+		int							equalityLeft;
+		int							libertyLeft;
+		map< int, set<string> >	colonies;
 };
 
 
